2003-03-13  Larry Ewing  <lewing@ximian.com>

	* htmliframe.c (check_point): remove incorrect addition of margins
	in point calculation.

2003-03-12  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_text_line_length): fix line_offset
	calculation

	* htmltextslave.c (html_text_slave_get_line_offset): removed
	line_offset parameter, updated all callers

	* htmlclueflow.c (html_clueflow_get_line_offset): don't allow head
	to be set to NULL

	* htmltextslave.c (calc_width): fix width calculation for tabs

2003-03-11  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_glyphs_base_text): return glyphs

	* htmlprinter.c (draw_text): fix print_y position

2003-03-10  Larry Ewing  <lewing@ximian.com>

	* htmlprinter.c (print_pixbuf): add a helper function to print
	pixbufs now that gnome print no longer has a print_pixbuf call.

2003-03-09  Larry Ewing  <lewing@ximian.com>

	* htmltextslave.c (get_glyphs_part): fix the check for itmems.

2003-03-08  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_timer_event): flush the update timers
	before removing them.

2003-03-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (CFLAGS): add -@GTKHTML_RELEASE@ to ICONDIR

2003-03-05  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (uninstall-hook): add unistall-hook to remove
	renamed .pc file.

2003-03-04  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (get_glyphs): use item->offset rather than adding
	lengths to find the current position.

2003-03-04  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_make_cursor_visible): let's keep
	cursor inside borders

	* gtkhtml.c (command): make SCROLL and FOCUS commands work just
	for non editable mode, let SCROLL commands set binding_handled so
	key are not propagated to parent's scrollbars

	* htmltext.c (html_text_request_word_width): destroy cached items
	when HTML_CHANGE_WORD_WIDTH

2003-03-03  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (draw_spell_errors): use items cache