@@ -1,3 +1,7 @@
+2003-03-14  Radek Doulik  <rodo@ximian.com>
+
+	* htmlplainpainter.c (draw_text): use shift_items
+
 2003-03-13  Larry Ewing  <lewing@ximian.com>
 
 	* htmliframe.c (check_point): remove incorrect addition of margins
